Add a positional record row-view and reusable-target vector accessors
Replace the per-row boxed Map with a positional ParquetRecord backed by a
per-batch RowColumns: typed read*/get* accessors, binary read in place, and
detach() for retention past the batch. Decode geometry at the call site through a
MemorySegmentWkbReader offset overload and rebuild the GeoTools feature reader on
the lazy record. Cap the default decode-ahead window to bound concurrent-read
peak heap. Add reusable-target getInto/copyInto accessors to the column vectors
and encode Arrow fixed-width buffers through them. Remove the RowAccessor family.

on-behalf-of: @multiversio <info@multivers.io>