@@ -15,6 +15,8 @@
  */
 package io.tileverse.parquetry.batch;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
 import io.tileverse.parquetry.schema.ColumnPath;
@@ -25,16 +27,17 @@ import lombok.NonNull;
  * A column vector holding nested struct rows. Each row is a named map of child vectors keyed by their relative column
  * path. The {@code validity} mask marks which rows are non-null structs; children may still be null at their own level.
  *
- * <p>The {@code children} map is copied on construction to guarantee immutability of the record's state.
+ * <p>The {@code children} map is copied on construction into an insertion-ordered, immutable map. The assembler inserts
+ * children in schema order, and preserving that order lets a positional row view address struct children by index.
  */
 public record StructVector(
         @NonNull Map<ColumnPath, ColumnVector> children,
         @NonNull Validity validity,
         int size) implements ColumnVector {
 
-    /** Compact canonical constructor: validates inputs and defensively copies the children map. */
+    /** Compact canonical constructor: validates inputs and defensively copies the children map, preserving order. */
     public StructVector {
-        children = Map.copyOf(children);
+        children = Collections.unmodifiableMap(new LinkedHashMap<>(children));
     }
 
     @Override
